# cregex

./: CMakeLists.txt  README.md
include/cregex/: AST.h  CRegex.h  Parser.h
src/: AST.c  CRegex.c  Parser.c
test/: main.c
